--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,7 +4,7 @@
     line-height: 35px;
     transition: 0.2s ease;
     &-treehouse {
-        padding: 25px 15px;
+        padding: 25px 12px;
         border: solid 5px $accent;
         border-radius: 15px;
         color: $white;
