--- a/scss/components/_textboxes.scss
+++ b/scss/components/_textboxes.scss
@@ -6,6 +6,7 @@
     border: solid 5px $accent;
     border-radius: 15px;
     box-shadow: 0 3px 35px rgb(0 0 0 / 60%);
+    box-sizing: border-box;
 }
 
 @media (min-width: map-get($breakpoints, 'sm')) {
